# untrace-sdk

./: .gitignore  .infisical.json  .npmrc  BEDROCK_INTEGRATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  README.md  backlog.md  biome.json  checkly.config.ts  knip.ts  lefthook.yml  package.json  test-bedrock-access.js  test-bedrock-tracing.js  test-untrace-config.js  turbo.json  unhook.yml  vercel.json
.changeset/: config.json  long-hounds-hope.md  nice-worlds-report.md
.claude/: MARKETING_COMMANDS.md  MARKETING_QUICK_REFERENCE.md  settings.local.json
.claude/agents/: frontend.md
.claude/commands/: analyze-competitor.md  devto-blog.md  discord-community.md  github-to-social.md  hackernews-launch.md  linkedin-thought-leader.md  marketing-coordinator.md  meme-generator.md  producthunt-launch.md  reddit-community.md  tiktok-devtok.md  twitter-viral.md  youtube-tutorial.md
.cursor/: mcp.json
.cursor/rules/: typescript.mdc
.github/: renovate.json
.github/workflows/: changeset-npm-release.yml  csharp-sdk-format.yml  csharp-sdk-release.yml  csharp-sdk-test.yml  database-migration.yml  elixir-sdk-format.yml  elixir-sdk-integration.yml  elixir-sdk-release.yml  elixir-sdk-test.yml  go-sdk-release.yml  go-sdk-test.yml  integration-tests.yml  python-sdk-release.yml  python-sdk-test.yml  rust-sdk-format.yml  rust-sdk-release.yml  rust-sdk-test.yml  typecheck-format.yml  vscode-extension-release.yml
contributing/: API_SCHEMAS.md  ARCHITECTURE.md  DELIVERABLES_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  MERMAID_DIAGRAMS.md  OBSERVABILITY_GUIDE.md  PRD.md  PRFAQ.md
destinations/: README.md  package.json  tsconfig.json
destinations/src/: index.ts  providers.ts  testing.ts
docs/: architecture.1.mdx1  architecture.mdx  configuration.mdx  contributing.mdx  dashboard.mdx  docs.json  introduction.mdx  package.json  providers.mdx  quickstart.mdx  routing.mdx  sdk-csharp.mdx  sdk-elixir.mdx  sdk-go.mdx  sdk-overview.mdx  sdk-python.mdx  sdk-rust.mdx  sdk.mdx  security.mdx
docs/api-reference/: openapi.json
docs/essentials/: data-model.mdx
examples/nextjs/: CHANGELOG.md  package.json  tsconfig.json
integ-test/: .gitignore  CHANGELOG.md  check-db-records.ts
integ-test/src/: basic.test.ts  trace-integration.test.ts  trace-simple.test.ts
integ-test/test-utils/: index.ts
integ-tests/: .gitignore  README.md  bunfig.toml  check-langfuse-api.ts  package.json  tsconfig.json
integ-tests/src/: destination.test.ts  langfuse-simple.test.ts  setup.ts  trace.test.ts
integ-tests/test-utils/: cleanup.ts  database.ts  env.ts  factories.ts
scripts/: install-bedrock-deps.sh  sync-python-version.cjs
sdks/csharp/: README.md  Untrace.csproj  Untrace.sln  package.json
sdks/elixir/: .credo.exs  .formatter.exs  .gitignore  README.md  mix.exs  package.json
sdks/go/: README.md  go.mod  package.json  untrace.go
sdks/go/examples/: go.mod  (+1 more)
sdks/js/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
sdks/python/: CHANGELOG.md  README.md  package.json  pyproject.toml
sdks/python/examples/: basic_usage.py
sdks/python/src/untrace/: __init__.py  attributes.py  client.py  context.py  exceptions.py  exporter.py  instrumentation.py  instrumentation_main.py  metrics.py  tracer.py  types.py  untrace.py
sdks/python/src/untrace/instrumentation/: __init__.py  anthropic.py  aws.py  base.py  cohere.py  google.py  microsoft.py  openai.py
sdks/python/src/untrace/providers/: __init__.py  anthropic.py  aws.py  base.py  cohere.py  google.py  microsoft.py  openai.py
sdks/python/tests/: __init__.py  example_usage.py  multi_provider_example.py  real_api_example.py  seamless_example.py  test_client.py  test_modular_instrumentation.py  test_openai_integration.py  test_openai_real_api.py  test_opentelemetry_integration.py  test_seamless_dx.py  test_untrace_sdk.py  user_example.py
sdks/rust/: Cargo.toml  README.md  package.json
sdks/rust/examples/: basic.rs  environment.rs  instrumentation.rs
sdks/rust/src/: attributes.rs  client.rs  config.rs  context.rs  error.rs  instrumentation.rs  lib.rs  metrics.rs  provider.rs  tracer.rs  types.rs  untrace.rs
tooling/commitlint/: package.json
tooling/github/: package.json
tooling/next/: baml-config.mjs  base.mjs  package.json  tsconfig.json
tooling/npm/: package.json  prepare-publish.js
tooling/testing/: package.json
tooling/typescript/: base.json  nextjs.json  node.json  package.json  react-library.json
turbo/generators/: config.ts
(+126 files in other folders)
